--- a/pages/sample/card-grid.html
+++ b/pages/sample/card-grid.html
@@ -23,58 +23,54 @@ permalink: "patterns/card-grid.html"
  button to indicate a call-to-action.</p>
 
 <!--TABS-->
-<div class="tab-group responsive">
- <ul id="tabs1" class="nav nav-tabs" role="tablist">
-  <li class="nav-item" role="presentation">
-   <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+<div class="tabs responsive">
+ <ul class="nav-tabs">
+  <li>
+   <a href="#section1">Example</a>
   </li>
-  <li class="nav-item" role="presentation">
-   <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  <li>
+   <a href="#section2">Source code</a>
   </li>
-
  </ul>
 
+ <!--Examples-->
+ <section id="section1" class="tab-pane">
+  <div class="card-header" id="heading-example1">
+   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
+    data-hash="#pane-example1" title="Example tab header">
+    Example
+   </a>
+  </div>
+  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
+   <div class="p-a-sm">
 
- <div id="tab-content1" class="tab-content">
-  <!--Examples-->
-  <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
-   <div class="card-header" id="heading-example1">
-    <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content1" aria-expanded="true"
-     aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
-     Example
-    </a>
-   </div>
-   <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="p-a-md">
-
-     {% include "../../src/_includes/modules/card-grid-basic.html" %}
+    {% include "../../src/_includes/modules/card-grid-basic.html" %}
 
 
-    </div>
    </div>
   </div>
+ </section>
 
 
 
-  <!--HTML-->
-  <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
-   <div class="card-header" id="heading-html1">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content1"
-     aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-     Source code
-    </a>
-   </div>
-   <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
-    <div class="card-body">
-     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/card-grid-basic.html" %}</code>
+ <!--HTML-->
+ <section id="section2" class="tab-pane">
+  <div class="card-header" id="heading-html1">
+   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
+    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
+    Source code
+   </a>
+  </div>
+  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
+   <div class="p-a-sm">
+    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/card-grid-basic.html" %}</code>
     </pre>
 
-    </div>
    </div>
   </div>
+ </section>
 
 
- </div>
 </div>
 <!--END TABS-->
 
@@ -90,59 +86,56 @@ permalink: "patterns/card-grid.html"
  release. Add an optional date, author and agency name.</p>
 
 <!--TABS-->
-<div class="tab-group responsive">
- <ul id="tabs4" class="nav nav-tabs" role="tablist">
-  <li class="nav-item" role="presentation">
-   <a id="tab-example4" href="#pane-example4" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+<div class="tabs responsive">
+ <ul class="nav-tabs">
+  <li>
+   <a href="#section3">Example</a>
   </li>
-  <li class="nav-item" role="presentation">
-   <a id="tab-html4" href="#pane-html4" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  <li>
+   <a href="#section4">Source code</a>
   </li>
-
  </ul>
 
 
- <div id="tab-content2" class="tab-content">
-  <!--Examples-->
-  <div id="pane-example4" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example4">
-   <div class="card-header" id="heading-example4">
-    <a data-bs-toggle="collapse" href="#collapse-example4" data-parent="#tab-content2" aria-expanded="true"
-     aria-controls="collapse-example4" data-hash="#pane-example4" title="Example tab header">
-     Example
-    </a>
-   </div>
-   <div id="collapse-example4" class="collapse show" role="tabpanel" aria-labelledby="heading-example4">
-    <div class="card-body p-b">
+ <!--Examples-->
+ <section id="section3" class="tab-pane">
+  <div class="card-header" id="heading-example4">
+   <a data-bs-toggle="collapse" href="#collapse-example4" aria-expanded="true" aria-controls="collapse-example4"
+    data-hash="#pane-example4" title="Example tab header">
+    Example
+   </a>
+  </div>
+  <div id="collapse-example4" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example4">
+   <div class="p-a-sm p-b">
 
 
-     {% include "../../src/_includes/modules/news-block.html" %}
+    {% include "../../src/_includes/modules/news-block.html" %}
 
 
-    </div>
    </div>
   </div>
+ </section>
 
 
 
-  <!--HTML-->
-  <div id="pane-html4" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html4">
-   <div class="card-header" id="heading-html4">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html4" data-parent="#tab-content2"
-     aria-expanded="false" aria-controls="collapse-html4" data-hash="#pane-html4" title="HTML Source code tab header">
-     Source code
-    </a>
-   </div>
-   <div id="collapse-html4" class="collapse" role="tabpanel" aria-labelledby="heading-html4">
-    <div class="card-body">
-     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/news-block.html" %}</code>
+ <!--HTML-->
+ <section id="section4" class="tab-pane">
+  <div class="card-header" id="heading-html4">
+   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html4" aria-expanded="false"
+    aria-controls="collapse-html4" data-hash="#pane-html4" title="HTML Source code tab header">
+    Source code
+   </a>
+  </div>
+  <div id="collapse-html4" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html4">
+   <div class="p-a-sm">
+    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/news-block.html" %}</code>
    </pre>
 
-    </div>
    </div>
   </div>
+ </section>
 
 
- </div>
 </div>
 <!--END TABS-->
 
@@ -151,63 +144,59 @@ permalink: "patterns/card-grid.html"
 <h2>Imagery</h2>
 <p>Imagery helps to visually communicate information. Use it to help your visitors understand your content better.</p>
 <!--TABS-->
-<div class="tab-group responsive">
- <ul id="tabs2" class="nav nav-tabs" role="tablist">
-  <li class="nav-item" role="presentation">
-   <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+<div class="tabs responsive">
+ <ul class="nav-tabs">
+  <li>
+   <a href="#section5">Example</a>
   </li>
-  <li class="nav-item" role="presentation">
-   <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  <li>
+   <a href="#section6">Source code</a>
   </li>
-
  </ul>
 
 
- <div id="tab-content3" class="tab-content">
-  <!--Examples-->
-  <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
-   <div class="card-header" id="heading-example2">
-    <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content3" aria-expanded="true"
-     aria-controls="collapse-example2" data-hash="#pane-example2" title="Example tab header">
-     Example
-    </a>
-   </div>
-   <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
-    <div class="card-body p-b-lg">
-     <h3 class="m-t-0">Graphics</h3>
-     {% include "../../src/_includes/modules/card-grid-icons.html" %}
+ <!--Examples-->
+ <section id="section5" class="tab-pane">
+  <div class="card-header" id="heading-example2">
+   <a data-bs-toggle="collapse" href="#collapse-example2" aria-expanded="true" aria-controls="collapse-example2"
+    data-hash="#pane-example2" title="Example tab header">
+    Example
+   </a>
+  </div>
+  <div id="collapse-example2" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
+   <div class="p-a-sm p-b-lg">
+    <h3 class="m-t-0">Graphics</h3>
+    {% include "../../src/_includes/modules/card-grid-icons.html" %}
 
-     <h3>Images</h3>
-     {% include "../../src/_includes/modules/card-grid-images.html" %}
-    </div>
+    <h3>Images</h3>
+    {% include "../../src/_includes/modules/card-grid-images.html" %}
    </div>
   </div>
+ </section>
 
 
 
-  <!--HTML-->
-  <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
-   <div class="card-header" id="heading-html2">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content3"
-     aria-expanded="false" aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
-     Source code
-    </a>
-   </div>
-   <div id="collapse-html2" class="collapse" role="tabpanel" aria-labelledby="heading-html2">
-    <div class="card-body">
-     <pre style="max-height: 300px;"><code><h3 class="m-t-0">Graphics</h3>
+ <!--HTML-->
+ <section id="section6" class="tab-pane">
+  <div class="card-header" id="heading-html2">
+   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
+    aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
+    Source code
+   </a>
+  </div>
+  <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
+   <div class="p-a-sm">
+    <pre style="max-height: 300px;"><code><h3 class="m-t-0">Graphics</h3>
 {% include "../../src/_includes/modules/card-grid-icons.html" %}
 
 <h3>Images</h3>
 {% include "../../src/_includes/modules/card-grid-images.html" %}
      </code>
     </pre>
-    </div>
    </div>
   </div>
+ </section>
 
-
- </div>
 </div>
 <!--END TABS-->
 
