--- a/pages/sample/css-gradient-backgrounds.html
+++ b/pages/sample/css-gradient-backgrounds.html
@@ -41,42 +41,41 @@ permalink: "get-started/css-classes-shortcuts/gradient-backgrounds.html"
   <h2>Linear gradients</h2>
 
   <!--TABS-->
-  <div class="tab-group responsive">
-   <ul id="tabs1" class="nav nav-tabs" role="tablist">
-    <li class="nav-item" role="presentation">
-     <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  <div class="tabs responsive">
+   <ul class="nav-tabs">
+    <li>
+     <a href="#section1">Example</a>
     </li>
-    <li class="nav-item" role="presentation">
-     <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+    <li>
+     <a href="#section2">Source code</a>
     </li>
    </ul>
 
-   <div id="tab-content" class="tab-content">
-    <!--Examples-->
-    <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
-     <div class="card-header" id="heading-example1">
-      <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
-       aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
-       Example
-      </a>
-     </div>
-     <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-      <div class="p-a-md">
-       {% include "../../src/_includes/modules/gradient-linear.html" %}
-      </div>
+   <!--Examples-->
+   <section id="section1" class="tab-pane">
+    <div class="card-header" id="heading-example1">
+     <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
+      data-hash="#pane-example1" title="Example tab header">
+      Example
+     </a>
+    </div>
+    <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
+     <div class="p-a-sm">
+      {% include "../../src/_includes/modules/gradient-linear.html" %}
      </div>
     </div>
+   </section>
 
-    <!--HTML-->
-    <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
-     <div class="card-header" id="heading-html1">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
-       aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-       Source code
-      </a>
-     </div>
-     <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
-      <div class="card-body">
+   <!--HTML-->
+   <section id="section2" class="tab-pane">
+    <div class="card-header" id="heading-html1">
+     <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
+      aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
+      Source code
+     </a>
+    </div>
+    <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
+     <div class="p-a-sm">
       <h4>Primary</h4>
       <pre style="max-height: 300px;"><code><div class="container height-100 bg-primary-gradient"></div></code></pre>
 
@@ -90,93 +89,105 @@ permalink: "get-started/css-classes-shortcuts/gradient-backgrounds.html"
       <pre style="max-height: 300px;"><code><div class="container height-100 bg-secondary-gradient"></div></code></pre>
 
       <h4>Primary-standout</h4>
-      <pre style="max-height: 300px;"><code><div class="container height-100 bg-primary-standout-gradient"></div></code></pre>
+      <pre
+       style="max-height: 300px;"><code><div class="container height-100 bg-primary-standout-gradient"></div></code></pre>
 
       <h4>Primary-highlight</h4>
-      <pre style="max-height: 300px;"><code><div class="container height-100 bg-primary-highlight-gradient"></div></code></pre>
+      <pre
+       style="max-height: 300px;"><code><div class="container height-100 bg-primary-highlight-gradient"></div></code></pre>
 
       <h4>Primary-secondary</h4>
-      <pre style="max-height: 300px;"><code><div class="container height-100 bg-primary-secondary-gradient"></div></code></pre>
+      <pre
+       style="max-height: 300px;"><code><div class="container height-100 bg-primary-secondary-gradient"></div></code></pre>
 
       <h4>Standout-highlight</h4>
-      <pre style="max-height: 300px;"><code><div class="container height-100 bg-standout-highlight-gradient"></div></code></pre>
+      <pre
+       style="max-height: 300px;"><code><div class="container height-100 bg-standout-highlight-gradient"></div></code></pre>
 
       <h4>Danger-warning</h4>
-      <pre style="max-height: 300px;"><code><div class="container height-100 bg-danger-warning-gradient"></div></code></pre>
+      <pre
+       style="max-height: 300px;"><code><div class="container height-100 bg-danger-warning-gradient"></div></code></pre>
 
       <h4>Info-success</h4>
-      <pre style="max-height: 300px;"><code><div class="container height-100 bg-info-success-gradient"></div></code></pre>
-      </div>
+      <pre
+       style="max-height: 300px;"><code><div class="container height-100 bg-info-success-gradient"></div></code></pre>
      </div>
     </div>
+   </section>
 
-   </div>
   </div>
   <!--END TABS-->
 
   <h2>Radial gradients</h2>
   <!--TABS-->
-  <div class="tab-group responsive">
-   <ul id="tabs1" class="nav nav-tabs" role="tablist">
-    <li class="nav-item" role="presentation">
-     <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  <div class="tabs responsive">
+   <ul class="nav-tabs">
+    <li>
+     <a href="#section3">Example</a>
     </li>
-    <li class="nav-item" role="presentation">
-     <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+    <li>
+     <a href="#section4">Source code</a>
     </li>
    </ul>
 
-   <div id="tab-content" class="tab-content">
-    <!--Examples-->
-    <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
-     <div class="card-header" id="heading-example2">
-      <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content" aria-expanded="true"
-       aria-controls="collapse-example2" data-hash="#pane-example2" title="Example tab header">
-       Example
-      </a>
-     </div>
-     <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
-      <div class="p-a-md">
-       {% include "../../src/_includes/modules/gradient-radial.html" %}
-      </div>
+   <!--Examples-->
+   <section id="section3" class="tab-pane">
+    <div class="card-header" id="heading-example2">
+     <a data-bs-toggle="collapse" href="#collapse-example2" aria-expanded="true" aria-controls="collapse-example2"
+      data-hash="#pane-example2" title="Example tab header">
+      Example
+     </a>
+    </div>
+    <div id="collapse-example2" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
+     <div class="p-a-sm">
+      {% include "../../src/_includes/modules/gradient-radial.html" %}
      </div>
     </div>
+   </section>
 
-    <!--HTML-->
-    <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
-     <div class="card-header" id="heading-html2">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content"
-       aria-expanded="false" aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
-       Source code
-      </a>
-     </div>
-     <div id="collapse-html2" class="collapse" role="tabpanel" aria-labelledby="heading-html2">
-      <div class="card-body">
-        <h4>Gray</h4>
-        <pre style="max-height: 300px;"><code><div class="container height-100 bg-grey-radialgradient"></div></code></pre>
+   <!--HTML-->
+   <section id="section4" class="tab-pane">
+    <div class="card-header" id="heading-html2">
+     <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
+      aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
+      Source code
+     </a>
+    </div>
+    <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
+     <div class="p-a-sm">
+      <h4>Gray</h4>
+      <pre style="max-height: 300px;"><code><div class="container height-100 bg-grey-radialgradient"></div></code></pre>
 
-        <h4>Grey Light</h4>
-        <pre style="max-height: 300px;"><code><div class="container height-100 bg-greylight-radialgradient"></div></code></pre>
+      <h4>Grey Light</h4>
+      <pre
+       style="max-height: 300px;"><code><div class="container height-100 bg-greylight-radialgradient"></div></code></pre>
 
-        <h4>Primary</h4>
-        <pre style="max-height: 300px;"><code><div class="container height-100 bg-primary-radialgradient"></div></code></pre>
+      <h4>Primary</h4>
+      <pre
+       style="max-height: 300px;"><code><div class="container height-100 bg-primary-radialgradient"></div></code></pre>
 
-        <h4>Highlight</h4>
-        <pre style="max-height: 300px;"><code><div class="container height-100 bg-highlight-radialgradient"></div></code></pre>
+      <h4>Highlight</h4>
+      <pre
+       style="max-height: 300px;"><code><div class="container height-100 bg-highlight-radialgradient"></div></code></pre>
 
-        <h4>Standout</h4>
-        <pre style="max-height: 300px;"><code><div class="container height-100 bg-standout-radialgradient"></div></code></pre>
+      <h4>Standout</h4>
+      <pre
+       style="max-height: 300px;"><code><div class="container height-100 bg-standout-radialgradient"></div></code></pre>
 
-        <h4>Secondary</h4>
-        <pre style="max-height: 300px;"><code><div class="container height-100 bg-secondary-radialgradient"></div></code></pre>
+      <h4>Secondary</h4>
+      <pre
+       style="max-height: 300px;"><code><div class="container height-100 bg-secondary-radialgradient"></div></code></pre>
 
-        <h4>Secondary light</h4>
-        <pre style="max-height: 300px;"><code><div class="container height-100 bg-secondarylight-radialgradient"></div></code></pre>
-      </div>
+      <h4>Secondary light</h4>
+      <pre
+       style="max-height: 300px;"><code><div class="container height-100 bg-secondarylight-radialgradient"></div></code></pre>
      </div>
     </div>
+   </section>
 
-   </div>
+
   </div>
+
+
  </div>
 </div>
