--- a/pages/sample/modal.html
+++ b/pages/sample/modal.html
@@ -34,97 +34,93 @@ permalink: "components/modal.html"
 <h2>Sample</h2>
 
 <!--TABS-->
-<div class="tab-group responsive">
- <ul id="tabs1" class="nav nav-tabs" role="tablist">
-  <li class="nav-item" role="presentation">
-   <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+<div class="tabs responsive">
+ <ul class="nav-tabs">
+  <li>
+   <a href="#section1">Example</a>
   </li>
-  <li class="nav-item" role="presentation">
-   <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  <li>
+   <a href="#section2">Source code</a>
   </li>
-  <li class="nav-item" role="presentation">
-   <a id="tab-include1" href="#pane-include1" class="nav-link" data-bs-toggle="tab" role="tab">Implementation notes</a>
+  <li>
+   <a href="#section3">Implementation notes</a>
   </li>
  </ul>
 
-
- <div id="tab-content" class="tab-content">
-  <!--Examples-->
-  <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
-   <div class="card-header" id="heading-example1">
-    <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
-     aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
-     Example
-    </a>
-   </div>
-   <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="card-body p-b-lg">
-     <div class="section-default">
-      <div class="container p-b-lg text-center">
-       <button type="button" class="btn btn-default btn-lg m-t-lg" data-bs-toggle="modal"
-        data-bs-target="#news-headlines">Open modal</button>
-      </div>
+ <!--Examples-->
+ <section id="section1" class="tab-pane">
+  <div class="card-header" id="heading-example1">
+   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
+    data-hash="#pane-example1" title="Example tab header">
+    Example
+   </a>
+  </div>
+  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
+   <div class="p-a-sm p-b-lg">
+    <div class="section-default">
+     <div class="container p-b-lg text-center">
+      <button type="button" class="btn btn-default btn-lg m-t-lg" data-bs-toggle="modal"
+       data-bs-target="#news-headlines">Open modal</button>
      </div>
     </div>
    </div>
   </div>
+ </section>
 
 
 
-  <!--HTML-->
-  <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
-   <div class="card-header" id="heading-html1">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
-     aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-     Source code
-    </a>
-   </div>
-   <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
-    <div class="card-body">
-     <h3 class="h4 m-t-0">Modal trigger button</h3>
-     <pre><code><button type="button" class="btn btn-default btn-lg m-t-lg" data-bs-toggle="modal"
+ <!--HTML-->
+ <section id="section2" class="tab-pane">
+  <div class="card-header" id="heading-html1">
+   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
+    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
+    Source code
+   </a>
+  </div>
+  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
+   <div class="p-a-sm">
+    <h3 class="h4 m-t-0">Modal trigger button</h3>
+    <pre><code><button type="button" class="btn btn-default btn-lg m-t-lg" data-bs-toggle="modal"
       data-bs-target="#news-headlines">Open modal</button></code></pre>
 
-     <h3 class="h4">Modal</h3>
-     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/modal.html" %}</code></pre>
+    <h3 class="h4">Modal</h3>
+    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/modal.html" %}</code></pre>
 
-    </div>
    </div>
   </div>
+ </section>
 
 
-  <!--Implementation-->
-  <div id="pane-include1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-include1">
-   <div class="card-header" id="heading-include1">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include1" data-parent="#tab-content"
-     aria-expanded="false" aria-controls="collapse-include1" data-hash="#pane-include1"
-     title="Implementation notes tab header">
-     Implementation notes
-    </a>
-   </div>
-   <div id="collapse-include1" class="collapse" role="tabpanel" aria-labelledby="heading-include1">
-    <div class="card-body">
-     <p class="m-b">Each modal has it's own ID. To trigger the modal, you'll need to include a link or a button that
-      refers to the
-      modal's ID. The markup for the trigger element might look like this:</p>
+ <!--Implementation-->
+ <section id="section3" class="tab-pane">
+  <div class="card-header" id="heading-include1">
+   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include1" aria-expanded="false"
+    aria-controls="collapse-include1" data-hash="#pane-include1" title="Implementation notes tab header">
+    Implementation notes
+   </a>
+  </div>
+  <div id="collapse-include1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-include1">
+   <div class="p-a-sm">
+    <p class="m-b">Each modal has it's own ID. To trigger the modal, you'll need to include a link or a button that
+     refers to the
+     modal's ID. The markup for the trigger element might look like this:</p>
 
-     <pre><code><button type="button" class="btn btn-default btn-lg m-t-lg" data-bs-toggle="modal"
+    <pre><code><button type="button" class="btn btn-default btn-lg m-t-lg" data-bs-toggle="modal"
        data-bs-target="#news-headlines">Open modal</button></code></pre>
 
-     <p class="m-t">The button element has two custom data attributes:</p>
-     <ul>
-      <li><code>data-bs-toggle</code> tells Bootstrap to open the modal.</li>
-      <li><code>data-bs-target</code> tells Bootstrap which element will open. When a person selects a link or button
-       with that ID (<code>#modalid</code>), that
-       modal will appear.</li>
-     </ul>
+    <p class="m-t">The button element has two custom data attributes:</p>
+    <ul>
+     <li><code>data-bs-toggle</code> tells Bootstrap to open the modal.</li>
+     <li><code>data-bs-target</code> tells Bootstrap which element will open. When a person selects a link or button
+      with that ID (<code>#modalid</code>), that
+      modal will appear.</li>
+    </ul>
 
-    </div>
    </div>
   </div>
+ </section>
 
 
- </div>
 </div>
 <!--END TABS-->
 
