--- a/pages/sample/parallax.html
+++ b/pages/sample/parallax.html
@@ -17,74 +17,72 @@ permalink: "components/parallax.html"
 <h2>Sample</h2>
 
 <!--TABS-->
-<div class="tab-group responsive">
- <ul id="tabs1" class="nav nav-tabs" role="tablist">
-  <li class="nav-item" role="presentation">
-   <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+<div class="tabs responsive">
+ <ul class="nav-tabs">
+  <li>
+   <a href="#section1">Example</a>
   </li>
-  <li class="nav-item" role="presentation">
-   <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  <li>
+   <a href="#section2">Source code</a>
   </li>
-
  </ul>
 
 
- <div id="tab-content" class="tab-content">
-  <!--Examples-->
-  <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
-   <div class="card-header" id="heading-example1">
-    <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
-     aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
-     Example
-    </a>
-   </div>
-   <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="card-body">
+ <!--Examples-->
+ <section id="section1" class="tab-pane">
+  <div class="card-header" id="heading-example1">
+   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
+    data-hash="#pane-example1" title="Example tab header">
+    Example
+   </a>
+  </div>
+  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
+   <div class="p-a-sm">
 
-     <div class="parallax-bg height-400 pos-rel" style="background-image: url(/images/bg-parallax1.jpg)">
-      <img src="/images/parallax1.png" class="pos-abs bottom-0 left-0" alt="parallax overlay">
+    <div class="parallax-bg height-400 pos-rel" style="background-image: url(/images/bg-parallax1.jpg)">
+     <img src="/images/parallax1.png" class="pos-abs bottom-0 left-0" alt="parallax overlay">
 
-      <h3 class="h3 text-center color-white m-0 p-a-md relative-centered width-30pct relative-centered bg-alpha-50">
-       Scroll down</h3>
-
-     </div>
-
-
-     <div class="parallax-bg height-300" style="background-image: url(/images/bg-parallax2.jpg)">
-      <img src="/images/parallax2.png" class="pos-abs top-0 right-0" alt="parallax overlay">
-      <div class="container p-y-lg pos-rel">
-       <h3 class="h3 text-center">Parallax height</h3>
-       <p class="text-center">Height can be specified by adding height class, such as
-        <code class="color-black">.height-300</code>
-       </p>
-      </div>
-     </div>
-     <div class="parallax-bg height-300 bg-dark" style="background-image: url(/images/bg-parallax3.jpg)">
-      <img src="/images/parallax3.png" class="pos-abs top-0 left-0" alt="parallax overlay">
-      <div class="container p-y-lg pos-rel">
-       <h3 class="h3 text-center color-white">Light text color</h3>
-       <p class="text-center color-white">Make light text on dark backgrounds by adding class .color-white
-       </p>
-      </div>
-     </div>
+     <h3 class="h3 text-center color-white m-0 p-a-md relative-centered width-30pct relative-centered bg-alpha-50">
+      Scroll down</h3>
 
     </div>
+
+
+    <div class="parallax-bg height-300" style="background-image: url(/images/bg-parallax2.jpg)">
+     <img src="/images/parallax2.png" class="pos-abs top-0 right-0" alt="parallax overlay">
+     <div class="container p-y-lg pos-rel">
+      <h3 class="h3 text-center">Parallax height</h3>
+      <p class="text-center">Height can be specified by adding height class, such as
+       <code class="color-black">.height-300</code>
+      </p>
+     </div>
+    </div>
+    <div class="parallax-bg height-300 bg-dark" style="background-image: url(/images/bg-parallax3.jpg)">
+     <img src="/images/parallax3.png" class="pos-abs top-0 left-0" alt="parallax overlay">
+     <div class="container p-y-lg pos-rel">
+      <h3 class="h3 text-center color-white">Light text color</h3>
+      <p class="text-center color-white">Make light text on dark backgrounds by adding class .color-white
+      </p>
+     </div>
+    </div>
+
    </div>
   </div>
+ </section>
 
 
 
-  <!--HTML-->
-  <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
-   <div class="card-header" id="heading-html1">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
-     aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-     Source code
-    </a>
-   </div>
-   <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
-    <div class="card-body">
-     <pre style="max-height: 300px;"><code><div class="parallax-bg height-400" style="background-image: url(/images/background-primary.jpg)">
+ <!--HTML-->
+ <section id="section2" class="tab-pane">
+  <div class="card-header" id="heading-html1">
+   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
+    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
+    Source code
+   </a>
+  </div>
+  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
+   <div class="p-a-sm">
+    <pre style="max-height: 300px;"><code><div class="parallax-bg height-400" style="background-image: url(/images/background-primary.jpg)">
         <div class="section-impact width-200 height-80 brd-gray-light brd-solid-1 relative-centered">
          <h3 class="h5 text-center m-0 p-a-md relative-centered">SCROLL DOWN</h3>
         </div>
@@ -106,12 +104,11 @@ permalink: "components/parallax.html"
        </div>       
       </code></pre>
 
-    </div>
    </div>
   </div>
+ </section>
 
 
- </div>
 </div>
 <!--END TABS-->
 
