--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -21,83 +21,76 @@ permalink: "/components/side-navigation.html"
 <h2>Single-level list</h2>
 
 <!--TABS-->
-<div class="tab-group responsive">
- <ul id="tabs1" class="nav nav-tabs" role="tablist">
-  <li class="nav-item" role="presentation">
-   <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+<div class="tabs responsive">
+ <ul class="nav-tabs">
+  <li>
+   <a href="#section1">Example</a>
   </li>
-  <li class="nav-item" role="presentation">
-   <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  <li>
+   <a href="#section2">Source code</a>
   </li>
-
-  <li class="nav-item" role="presentation">
-   <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Implementation notes</a>
+  <li>
+   <a href="#section3">Implementation notes</a>
   </li>
-
  </ul>
 
 
- <div id="tab-content1" class="tab-content">
-  <!--Examples-->
-  <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
-   <div class="card-header" id="heading-example1">
-    <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content1" aria-expanded="true"
-     aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
-     Example
-    </a>
-   </div>
-   <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="p-a-md p-b-lg col-md-5">
+ <!--Examples-->
+ <section id="section1" class="tab-pane">
+  <div class="card-header" id="heading-example1">
+   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
+    data-hash="#pane-example1" title="Example tab header">
+    Example
+   </a>
+  </div>
+  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
+   <div class="p-a-sm col-md-5">
 
-     {% include "../../src/_includes/modules/side-navigation.html" %}
+    {% include "../../src/_includes/modules/side-navigation.html" %}
 
 
-    </div>
    </div>
   </div>
+ </section>
 
 
 
-  <!--HTML-->
-  <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
-   <div class="card-header" id="heading-html1">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content1"
-     aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-     Source code
-    </a>
-   </div>
-   <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
-    <div class="card-body">
-     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/side-navigation.html" %}</pre></code>
+ <!--HTML-->
+ <section id="section2" class="tab-pane">
+  <div class="card-header" id="heading-html1">
+   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
+    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
+    Source code
+   </a>
+  </div>
+  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
+   <div class="p-a-sm">
+    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/side-navigation.html" %}</pre></code>
 
-    </div>
    </div>
   </div>
+ </section>
 
 
-  <!--Implementation notes-->
-  <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
-   <div class="card-header" id="heading-html2">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content2"
-     aria-expanded="false" aria-controls="collapse-html2" data-hash="#pane-html2"
-     title="Implementation notes tab header">
-     Implementation notes
-    </a>
-   </div>
-   <div id="collapse-html2" class="collapse" role="tabpanel" aria-labelledby="heading-html2">
-    <div class="card-body">
-     <p class="m-b">Add class <code>landing</code> to your landing page link to indicate the landing page. Use
-      <code>active</code> class on your link to indicate the current page if the page is currently open.
-     </p>
-     <pre><code><li><a href="javascript:;" class="landing active">Landing page</a></li></code></pre>
-    </div>
+ <!--Implementation notes-->
+ <section id="section3" class="tab-pane">
+  <div class="card-header" id="heading-html2">
+   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
+    aria-controls="collapse-html2" data-hash="#pane-html2" title="Implementation notes tab header">
+    Implementation notes
+   </a>
+  </div>
+  <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
+   <div class="p-a-sm">
+    <p class="m-b">Add class <code>landing</code> to your landing page link to indicate the landing page. Use
+     <code>active</code> class on your link to indicate the current page if the page is currently open.
+    </p>
+    <pre><code><li><a href="javascript:;" class="landing active">Landing page</a></li></code></pre>
    </div>
   </div>
+ </section>
 
 
-
-
- </div>
 </div>
 <!--END TABS-->
 
