--- a/pages/sample/table.html
+++ b/pages/sample/table.html
@@ -13,151 +13,148 @@ permalink: "components/table.html"
 
 <h2>Basic</h2>
 <!--TABS-->
-<div class="tab-group responsive">
- <ul id="tabs1" class="nav nav-tabs" role="tablist">
-  <li class="nav-item" role="presentation">
-   <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+<div class="tabs responsive">
+ <ul class="nav-tabs">
+  <li>
+   <a href="#section1">Example</a>
   </li>
-  <li class="nav-item" role="presentation">
-   <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  <li>
+   <a href="#section2">Source code</a>
   </li>
-
  </ul>
 
- <div id="tab-content" class="tab-content">
-  <!--Examples-->
-  <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
-   <div class="card-header" id="heading-example1">
-    <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
-     aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
-     Example
-    </a>
-   </div>
-   <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="card-body p-b-sm">
 
-     {% include "../../src/_includes/modules/table.html" %}
+ <!--Examples-->
+ <section id="section1" class="tab-pane">
+  <div class="card-header" id="heading-example1">
+   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
+    data-hash="#pane-example1" title="Example tab header">
+    Example
+   </a>
+  </div>
+  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
+   <div class="p-a-sm">
 
-    </div>
+    {% include "../../src/_includes/modules/table.html" %}
+
    </div>
   </div>
-  <!--HTML-->
-  <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
-   <div class="card-header" id="heading-html1">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
-     aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-     Source code
-    </a>
-   </div>
-   <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
-    <div class="card-body">
-     <pre style="max-height: 300px;">
+ </section>
+ <!--HTML-->
+ <section id="section2" class="tab-pane">
+  <div class="card-header" id="heading-html1">
+   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
+    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
+    Source code
+   </a>
+  </div>
+  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
+   <div class="p-a-sm">
+    <pre style="max-height: 300px;">
 <code>{% include "../../src/_includes/modules/table.html" %}</code>
      </pre>
-    </div>
    </div>
   </div>
- </div>
+ </section>
+
 </div>
 <!--END TABS-->
 
 <h2>Shaded</h2>
 <!--TABS-->
-<div class="tab-group responsive">
- <ul id="tabs2" class="nav nav-tabs" role="tablist">
-  <li class="nav-item" role="presentation">
-   <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+<div class="tabs responsive">
+ <ul class="nav-tabs">
+  <li>
+   <a href="#section3">Example</a>
   </li>
-  <li class="nav-item" role="presentation">
-   <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  <li>
+   <a href="#section4">Source code</a>
   </li>
-
  </ul>
 
- <div id="tab-content" class="tab-content">
-  <!--Examples-->
-  <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
-   <div class="card-header" id="heading-example2">
-    <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content" aria-expanded="true"
-     aria-controls="collapse-example2" data-hash="#pane-example2" title="Example tab header">
-     Example
-    </a>
-   </div>
-   <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
-    <div class="card-body p-b-sm">
 
-     {% include "../../src/_includes/modules/table-default.html" %}
+ <!--Examples-->
+ <section id="section3" class="tab-pane">
+  <div class="card-header" id="heading-example2">
+   <a data-bs-toggle="collapse" href="#collapse-example2" aria-expanded="true" aria-controls="collapse-example2"
+    data-hash="#pane-example2" title="Example tab header">
+    Example
+   </a>
+  </div>
+  <div id="collapse-example2" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
+   <div class="p-a-sm">
 
-    </div>
+    {% include "../../src/_includes/modules/table-default.html" %}
+
    </div>
   </div>
-  <!--HTML-->
-  <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
-   <div class="card-header" id="heading-html2">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content"
-     aria-expanded="false" aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
-     Source code
-    </a>
-   </div>
-   <div id="collapse-html2" class="collapse" role="tabpanel" aria-labelledby="heading-html2">
-    <div class="card-body">
-     <pre style="max-height: 300px;">
+ </section>
+ <!--HTML-->
+ <section id="section4" class="tab-pane">
+  <div class="card-header" id="heading-html2">
+   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
+    aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
+    Source code
+   </a>
+  </div>
+  <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
+   <div class="p-a-sm">
+    <pre style="max-height: 300px;">
 <code>{% include "../../src/_includes/modules/table-default.html" %}</code>
     </pre>
-    </div>
    </div>
   </div>
- </div>
+ </section>
+
 </div>
 <!--END TABS-->
 
 <h2>Zebra</h2>
 <!--TABS-->
-<div class="tab-group responsive">
- <ul id="tabs3" class="nav nav-tabs" role="tablist">
-  <li class="nav-item" role="presentation">
-   <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+<div class="tabs responsive">
+ <ul class="nav-tabs">
+  <li>
+   <a href="#section5">Example</a>
   </li>
-  <li class="nav-item" role="presentation">
-   <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  <li>
+   <a href="#section6">Source code</a>
   </li>
-
  </ul>
 
- <div id="tab-content" class="tab-content">
-  <!--Examples-->
-  <div id="pane-example3" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example3">
-   <div class="card-header" id="heading-example3">
-    <a data-bs-toggle="collapse" href="#collapse-example3" data-parent="#tab-content" aria-expanded="true"
-     aria-controls="collapse-example3" data-hash="#pane-example3" title="Example tab header">
-     Example
-    </a>
-   </div>
-   <div id="collapse-example3" class="collapse show" role="tabpanel" aria-labelledby="heading-example3">
-    <div class="card-body p-b-sm">
 
-     {% include "../../src/_includes/modules/table-striped.html" %}
+ <!--Examples-->
+ <section id="section5" class="tab-pane">
+  <div class="card-header" id="heading-example3">
+   <a data-bs-toggle="collapse" href="#collapse-example3" aria-expanded="true" aria-controls="collapse-example3"
+    data-hash="#pane-example3" title="Example tab header">
+    Example
+   </a>
+  </div>
+  <div id="collapse-example3" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example3">
+   <div class="p-a-sm">
 
-    </div>
+    {% include "../../src/_includes/modules/table-striped.html" %}
+
    </div>
   </div>
-  <!--HTML-->
-  <div id="pane-html3" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html3">
-   <div class="card-header" id="heading-html3">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content"
-     aria-expanded="false" aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
-     Source code
-    </a>
-   </div>
-   <div id="collapse-html3" class="collapse" role="tabpanel" aria-labelledby="heading-html3">
-    <div class="card-body">
-     <pre style="max-height: 300px;">
+ </section>
+ <!--HTML-->
+ <section id="section6" class="tab-pane">
+  <div class="card-header" id="heading-html3">
+   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" aria-expanded="false"
+    aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
+    Source code
+   </a>
+  </div>
+  <div id="collapse-html3" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html3">
+   <div class="p-a-sm">
+    <pre style="max-height: 300px;">
 <code>{% include "../../src/_includes/modules/table-striped.html" %}</code>
     </pre>
-    </div>
    </div>
   </div>
- </div>
+ </section>
+
 </div>
 <!--END TABS-->
 
